--- a/index.html
+++ b/index.html
@@ -14,37 +14,44 @@
 </head>
 
 <body>
-    <center><p class="warning">Don't divide by zero</p></center>
+    <p class="warning"></p>
 
     <div id="calculator" class="calculator">
 
-      <button id="clear" class="clear calBtn">C</button>
+    <center><div id="viewer" class="viewer">0</div></center>
 
-      <div id="viewer" class="viewer">0</div>
+    <button id="equals" class="equals pinkNeonButtons calBtn" data-result="">=</button>
 
-      <button class="num calBtn" data-num="7">7</button>
-      <button class="num calBtn" data-num="8">8</button>
-      <button class="num calBtn" data-num="9">9</button>
-      <button data-ops="plus" class="ops calBtn">+</button>
+    <button class="num calBtn" data-num="7">7</button>
+    <button class="num calBtn" data-num="8">8</button>
+    <button class="num calBtn" data-num="9">9</button>
+    <button data-ops="plus" class="ops pinkNeonButtons calBtn">+</button>
 
-      <button class="num calBtn" data-num="4">4</button>
-      <button class="num calBtn" data-num="5">5</button>
-      <button class="num calBtn" data-num="6">6</button>
-      <button data-ops="minus" class="ops calBtn">-</button>
+    <button class="num calBtn" data-num="4">4</button>
+    <button class="num calBtn" data-num="5">5</button>
+    <button class="num calBtn" data-num="6">6</button>
+    <button data-ops="minus" class="ops pinkNeonButtons calBtn">-</button>
 
-      <button class="num calBtn" data-num="1">1</button>
-      <button class="num calBtn" data-num="2">2</button>
-      <button class="num calBtn" data-num="3">3</button>
-      <button data-ops="times" class="ops calBtn">*</button>
+    <button class="num calBtn" data-num="1">1</button>
+    <button class="num calBtn" data-num="2">2</button>
+    <button class="num calBtn" data-num="3">3</button>
+    <button data-ops="times" class="ops pinkNeonButtons calBtn">*</button>
 
-      <button class="num calBtn" data-num="0">0</button>
-      <button class="num calBtn" data-num=".">.</button>
-      <button id="equals" class="equals calBtn" data-result="">=</button>
-      <button data-ops="divided by" class="ops calBtn">/</button>
+    <button class="num calBtn" data-num=".">.</button>
+    <button class="num calBtn" data-num="0">0</button>
+    <button id="clear" class="clear calBtn">C</button>
+    <button data-ops="divided by" class="ops pinkNeonButtons calBtn">/</button>
     </div>
 
-    <button id="reset" class="reset">Reset Universe?</button>
+    <button id="reset" class="reset">Reset Universe</button>
 
-    <script type="text/javascript" src="app.js"></script>
+    <div class="svga"></div>
+    <div class="svgb"></div>
+    <div class="svgc"></div>
+    <div class="svgd"></div>
+    <div class="svge"></div>
+    <div class="svgf"></div>
+
+<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
